--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
-    <h1> oliviarchive </h1>
+    <h1 class="centered"> oliviarchive </h1>
 
     <nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-light">
         <!-- <a class="navbar-brand" href="/">oliviarchive</a> -->
@@ -34,7 +34,7 @@
     </form> -->
 
     <div class="container">
-        <div class="row"><h2>all recipes</h2></div><br><br>
+        <div class="row"><h2 class="centered">all recipes</h2></div><br><br>
         <div class="row justify-content-md-center">
             <div class="col col-lg-3">
                 <div class="row">
